# yahoo_search_engine

./: .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  experimental_script.py  experimental_script_practice.py  google_search.logs  main.py  pyproject.toml  requirements.txt  shell.sh
database_management/: construct_connection_string.py  env.py  tables.py
database_management/versions/: 3a59c01381f4_add_last_extracted_user_status_table.py  e28b60583ea8_add_extracted_search_results.py  ec3b77877af9_create_user_and_search_results_table.py
integration_tests/: config.toml  conftest.py
integration_tests/src/services/: test_yahoo_search_dao.py
integration_tests/src/utils/: clear_tables.py  engine.py  fetch.py  fetch_all_users.py
local_config/: config.toml
some_folder/: package_level_import_test.py
src/: main.py
src/models/: search_results.py  user.py
src/services/: google_search_dao.py  google_search_service.py  yahoo_search_dao.py  yahoo_search_service.py
src/utils/: construct_connection_string.py  logging_utils.py
unit_tests/src/models/: test_search_results.py  test_user.py
unit_tests/src/services/: test_google_search_service.py  test_yahoo_search_service.py
unit_tests/src/utils/: test_construct_connection_string.py
